# spear

./: .clang-format  .gitignore  .gitmodules  AnalysisStrategy_8h_source.html  CLIHandler_8h_source.html  CLIOptions_8h_source.html  CMakeLists.txt  CPUProfiler_8h_source.html  CPU__vendor_8h_source.html  CheckExpr_8h_source.html  ClusteredAnalysis_8h_source.html  Color_8h_source.html  ConfigParser_8h_source.html  DRAMProfiler_8h_source.html  DeMangler_8h_source.html  DeltaInterval_8h_source.html  ELBParser_8h_source.html  ELPMapper_8h_source.html  EnergyFunction_8h_source.html  FeasibilityAnalysisManager_8h_source.html  FeasibilityAnalysis_8h_source.html  FeasibilityEdgeFunction_8h_source.html  FeasibilityElement_8h_source.html  FeasibilityEnvironment_8h_source.html  FeasibilitySetSatness_8h_source.html  FeasibilityWrapper_8h_source.html  FunctionTree_8h_source.html  HLACHashing_8h_source.html  HLAC_2util_8h_source.html  ILPBuilder_8h_source.html  ILPClusterCache_8h_source.html  ILPDebug_8h_source.html  ILPSolver_8h_source.html  ILPTypes_8h_source.html  ILPUtil_8h_source.html  InstructionCategory_8h_source.html  LLVMHandler_8h_source.html  LegacyAnalysis_8h_source.html  Logger_8h_source.html  LoopBoundEdgeFunction_8h_source.html  (+334 more)
.github/workflows/: code.yml  code_quality.yml  codequality.yml  documentation.yml  main.yml
filter/: sched_gate.bpf.c
lib/passes/: CMakeLists.txt  ClusteredAnalysis.cpp  LegacyAnalysis.cpp  MonolithicAnalysis.cpp  PassUtil.cpp  energy.cpp
lib/spear/: CLIHandler.cpp  CLIOptions.cpp  Color.cpp  ConfigParser.cpp  DeMangler.cpp  Edge.cpp  EnergyFunction.cpp  FunctionTree.cpp  InstructionCategory.cpp  InstructionElement.cpp  JSONHandler.cpp  LLVMHandler.cpp  Logger.cpp  LoopNode.cpp  LoopTree.cpp  Modelchecker.cpp  Node.cpp  OutputHandler.cpp  PhasarHandler.cpp  PowercapReader.cpp  ProfileHandler.cpp  Profiler.cpp  ProgramGraph.cpp  RaplReader.cpp  RegisterReader.cpp
lib/spear/ELBs/: ELBMapper.cpp  ELBParser.cpp
lib/spear/HLAC/: CallNode.cpp  Edge.cpp  FunctionNode.cpp  HLACHashing.cpp  LoopNode.cpp  Node.cpp  Util.cpp  VirtualNode.cpp  hlac.cpp  hlacWrapper.cpp  node.cpp
lib/spear/ILP/: ILPBuilder.cpp  ILPClusterCache.cpp  ILPDebug.cpp  ILPSolver.cpp  ILPUtil.cpp
lib/spear/analyses/: LoopBoundEdgeFunction.cpp  ResultRegistry.cpp  (+2 more)
lib/test/: main.cpp  testutils.h
profile/src/: _cachewarmer.ll  add.ll  add_f.ll  and.ll  br.ll  div_f.ll  eq.ll  getelementptr.ll  load.ll  mul.ll  mul_f.ll  ne.ll  or.ll  rem_f.ll  sdiv.ll  select.ll  sext.ll  sge.ll  sgt.ll  shl.ll  shr.ll  sle.ll  slt.ll  srem.ll  store.ll  sub.ll  sub_f.ll  udiv.ll  uge.ll  ugt.ll  ule.ll  ult.ll  urem.ll  xor.ll  zext.ll
programs/ILP/: benchmark1.cpp  benchmark2.cpp  benchmark3.cpp  benchmark4.cpp  benchmark5.cpp  callInLoop.cpp  generic.cpp  mutualRecursive.cpp  recursive.cpp
programs/examples/: arrayReducer_complex.cpp  arrayReducer_forwithoffsetNonlinear.cpp  arrayReducer_forwithoffsetlinear.cpp  arrayReducer_multiply.cpp  arrayReducer_negative.cpp  arrayReducer_nonlinearincrement.cpp  arrayReducer_while.cpp  arrayReducer_whilenonlinearincrement.cpp  arrayReducer_whilenonlinearincrementWithIFMultipleFamily.cpp
programs/feasibility/: feasibility_bothloads.cpp  feasibility_bubblesort.cpp  feasibility_call.cpp  feasibility_call_edit.cpp  feasibility_deep.cpp  feasibility_deep_wide.cpp  feasibility_edit.cpp  feasibility_extreme_depth.cpp  feasibility_extreme_width.cpp  feasibility_if_in_loop.cpp  feasibility_loop.cpp  feasibility_nested_both_wrong.cpp  feasibility_nested_one_wrong.cpp  feasibility_simple.cpp  feasibility_ssa_width.cpp  feasibility_store.cpp  feasibility_two_ssa.cpp  feasibility_two_ssa_sq.cpp  feasibility_wide.cpp
programs/hlac/: calling.cpp  icmp.cpp
programs/loopbound/: arrayReducer_checkmodified.cpp  arrayReducer_complex.cpp  arrayReducer_forDependingOnFor.cpp  arrayReducer_forinfor.cpp  arrayReducer_infinite.cpp  arrayReducer_loadedcheck.cpp  arrayReducer_loopmalformed.cpp  arrayReducer_multiply.cpp  arrayReducer_negative.cpp  arrayReducer_nonlinearincrement.cpp  arrayReducer_nonlinearincrementDIV.cpp  arrayReducer_notcounting.cpp  arrayReducer_simple.cpp  arrayReducer_twoloops.cpp  arrayReducer_while.cpp  arrayReducer_whileif.cpp  arrayReducer_whileinwhile.cpp  arrayReducer_whilenonlinearincrementWithIFOneFamily.cpp  loopbound_alternative.cpp  loopbound_double.cpp  loopbound_equal_bad.cpp  loopbound_infinite.cpp  loopbound_loop_capsuled_if.cpp  loopbound_loopinloop.cpp  loopbound_std.cpp  loopbound_std_long.cpp
programs/multiexit/: A.cpp  B.cpp  mirror.cpp  negative.cpp  simple.cpp
programs/syscalls/: directsyscall.cpp  fork.cpp  pipe.cpp  read.cpp  read_dummy.cpp  readv.cpp  umask.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+50 more)
src/passes/: ClusteredAnalysis.h  LegacyAnalysis.h  MonolithicAnalysis.h  PassUtil.h
src/spear/: AnalysisStrategy.h  CLIHandler.h  CLIOptions.h  CMakeLists.txt  CPUProfiler.h  CPU_vendor.h  Color.h  ConfigParser.h  DRAMProfiler.h  DeMangler.h  Domain.h  EnergyFunction.h  FunctionTree.h  InstructionCategory.h  JSONHandler.h  LLVMHandler.h  Logger.h  LoopTree.h  Modelchecker.h  OutputHandler.h  PhasarHandler.h  PhasarResultRegistry.h  PowercapReader.h  ProfileHandler.h  Profiler.h  ProgramGraph.h  RAPLReader.h  RegisterReader.h
util/analysisrunner/: stabilitytester.py
util/llvmToBinary/: OSXcppToBinary.sh  cppToBinary.sh  irToBinary.sh
util/measure_program/: measure.py  programs.yaml  requirements.txt  sqlite_o1.yaml  zlib_o1.yaml
util/profilegenerator/: README.md  main.py
util/profileprinter/: ppp.py
util/profileregression/: main.py
util/syscalls/: syscalltablegenerator.py
(+113 files in other folders)
